* GSWeb.framework/GSWTemplateParser.m ([GSWTemplateParser -definitions]): compilable with gcc < 3 * GSWeb.framework/GSWHyperlink.m ([GSWHyperlink -computeQueryDictionaryInContext:]): likewise.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15192 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-12-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWTemplateParser.m ([GSWTemplateParser
+	-definitions]): compilable with gcc < 3
+	* GSWeb.framework/GSWHyperlink.m ([GSWHyperlink
+	-computeQueryDictionaryInContext:]): likewise.
+
 2002-11-27   Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb/GSWApplication.m:
