* configure.ac: export xml includes in gsweb.make * gsweb.make.in (AUXILIARY_INCLUDE_DIRS): added. * Makefile.postamble: moved gsweb.make in Auxiliary/ make dir.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15193 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-12-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
+	* configure.ac: export xml includes in gsweb.make
+	* gsweb.make.in (AUXILIARY_INCLUDE_DIRS): added.
+	* Makefile.postamble: moved gsweb.make in Auxiliary/ make dir.
+
 	* GSWeb.framework/GSWTemplateParser.m ([GSWTemplateParser
 	-definitions]): compilable with gcc < 3
 	* GSWeb.framework/GSWHyperlink.m ([GSWHyperlink
