* GSWeb.framework/GSWApplication.m (GSWApplicationDebugSetChange): read the file only if supplied.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15196 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-12-02  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
+	* GSWeb.framework/GSWApplication.m (GSWApplicationDebugSetChange): read
+	the file only if supplied.
+
 	* configure.ac: export xml includes in gsweb.make
 	* gsweb.make.in (AUXILIARY_INCLUDE_DIRS): added.
 	* Makefile.postamble: moved gsweb.make in Auxiliary/ make dir.
