2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWeb/GSWApplication.m 		o don't use NSClassFromString to support GSW & WO namespaces 			(David Ayers <d.ayers@inode.at> patch)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15263 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWApplication.m
+		o don't use NSClassFromString to support GSW & WO namespaces
+			(David Ayers <d.ayers@inode.at> patch)
+
+2002-12-06   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWTemplateParserXML.[mh]
     		o move references to libxml into .m file 
 			(David Ayers <d.ayers@inode.at> patch)
