2002-12-11   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWeb/GSWAdaptors/common/GSWUtil.h 		o changes to handle Apache 2.x 	* GSWeb/GSWAdaptors/common/config.h 		o changes to handle Apache 2.x 	* GSWeb/GSWAdaptors/common/GSWConfig.h 		o changes to handle Apache 2.x 	* GSWeb/GSWAdaptors/common/GSWUtil.c 		o changes to handle Apache 2.x 	* GSWeb/GSWAdaptors/Apache/GNUmakefile-Apache1x 		o new name of Apache 1.x GNUmakfile 	* GSWeb/GSWAdaptors/Apache/GNUmakefile-Apache2x 		o New Apache 2.x makefile 	* GSWeb/GSWAdaptors/Apache/INSTALL 		o changes to handle Apache 2.x 	* GSWeb/GSWAdaptors/Apache/mod_gsweb.c 		o changes to handle Apache 2.x
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@15282 72102866-910b-0410-8b05-ffd578937521

--- a/GSWAdaptors/Apache/INSTALL
+++ b/GSWAdaptors/Apache/INSTALL
@@ -1,24 +1,48 @@
 You have to do:
 
-o make
-o copy mod_gsweb.so in apache libexec (the apache directory of modules, in which you should have mod_mime.so, mod_alias.so,...)
-o edit your apache configuration file:
+For Apache 1.x:
+	o make -f GNUmakefile-Apache1x
+	o copy mod_gsweb.so in apache libexec (the apache directory of modules, in which you should have mod_mime.so, mod_alias.so,...)
+	o edit your apache configuration file:
 
-	- Add 
+		- Add 
 
-        LoadModule GSWeb_Module  libexec/mod_gsweb.so
-        AddModule mod_gsweb.c
+	        LoadModule GSWeb_Module  libexec/mod_gsweb.so
+	        AddModule mod_gsweb.c
 
-	- Add Global configuration directives:
-		o gsweb configuration file path
-			GSWeb_ConfigFilePath /etc/httpd/conf/gsweb.conf		(for exemple)
-		o gsweb alias
-			GSWeb_Alias /GSWeb									(for exemple)
+		- Add Global configuration directives:
+			o gsweb configuration file path
+				GSWeb_ConfigFilePath /etc/httpd/conf/gsweb.conf		(for exemple)
+			o gsweb alias
+				GSWeb_Alias /GSWeb									(for exemple)
 
-    - Add the following lines for a virtual host (or all hosts)
-        <Location /GSWeb*>
-                SetHandler GSWeb
-        </Location>
+	    - Add the following lines for a virtual host (or all hosts)
+	        <Location /GSWeb*>
+	                SetHandler GSWeb
+	        </Location>
 
-o create your gsweb configuration file (see ../Doc/ConfigurationFile.html)
+	o create your gsweb configuration file (see ../Doc/ConfigurationFile.html)
+
+
+For Apache 2.x:
+	o make -f GNUmakefile-Apache2x all
+	o copy mod_gsweb.so in apache libexec (the apache directory of modules, in which you should have mod_mime.so, mod_alias.so,...)
+	o edit your apache configuration file:
+
+		- Add 
+
+	        LoadModule GSWeb_Module  libexec/mod_gsweb.so
+
+		- Add Global configuration directives:
+			o gsweb configuration file path
+				GSWeb_ConfigFilePath /etc/httpd/conf/gsweb.conf		(for exemple)
+			o gsweb alias
+				GSWeb_Alias /GSWeb									(for exemple)
+
+	    - Add the following lines for a virtual host (or all hosts)
+	        <Location /GSWeb*>
+	                SetHandler GSWeb
+	        </Location>
+
+	o create your gsweb configuration file (see ../Doc/ConfigurationFile.html)
 
