* GSWeb.framework/GSWDebug.h: fixed #define.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16016 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-19  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWDebug.h: fixed #define.
+
 2003-02-01   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/NSString+Trimming.m:
 		o Replaced DataToHexString with -[NSData
