* GSWAdaptors/common/GSWUtil.c|.h (strcasestr): removed CONST from declaration.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16022 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-20  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWAdaptors/common/GSWUtil.c|.h (strcasestr): removed CONST from
+	declaration.
+
 2003-02-19  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWDebug.h: fixed #define.
