2003-03-04   Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWeb/GSWInput.m: 		o logs 	* GSWeb/GSWCheckBox.m: 		o logs 		o fix for disabled check box 	* GSWAdaptors/Apache/mod_gsweb.c 		o typo fix
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16128 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-03-04   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWInput.m:
+		o logs
+	* GSWeb/GSWCheckBox.m:
+		o logs
+		o fix for disabled check box
+	* GSWAdaptors/Apache/mod_gsweb.c 
+		o typo fix
+	
 2003-03-03   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWSessionTimeOutManager.m:
 		o Better handling of lock during exceptions 
