* GSWeb/NSString+HTML.m ([NSString -decodeURL]): Updated function 	name.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16130 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-04  David Ayers  <d.ayers@inode.at>
+
+	* GSWeb/NSString+HTML.m ([NSString -decodeURL]): Updated function
+	name.
+	
 2003-03-04   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWInput.m:
 		o logs
