2003-03-27   David Wetzel <dave@turbocat.de>         * GSWAdaptors/common/GSWTemplates.c fixed typo. doesn't repond -> doesn't respond
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@16274 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-03-27   David Wetzel <dave@turbocat.de>
+	* GSWAdaptors/common/GSWTemplates.c fixed typo. doesn't repond -> doesn't respond
+
 2003-03-24   Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb.framework/GSWRequest.m:
